feat: add pubsub sse channel
